Calendar for only registered users, password instructions in signup

--- a/iadsapp/templates/base.html
+++ b/iadsapp/templates/base.html
@@ -74,6 +74,10 @@
                 </ul>
             </div>
         </div>
+       <div class="row">
+            <div class="col l6 s12">
+                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Group 5</a>
+            </div>
     </div>
 
 </footer>
