--- a/iadsapp/templates/terms.html
+++ b/iadsapp/templates/terms.html
@@ -1,14 +1,14 @@
 <!-- privacy_notice.html -->
 {% extends 'base.html' %}
 
-{% block title %}Privacy Notice{% endblock %}
+{% block title %}Terms and Conditions{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1>Terms of Service</h1>
     <!-- Terms of Service -->
 <h5>Terms of Service</h5>
-<p>These Terms of Service ("Terms") govern your access to and use of GameCriticHub (the "Service") operated by Group 5.</p>
+<p>These Terms of Service ("Terms") govern your access to and use of NexaGame (the "Service") operated by Group 5.</p>
 
 <!-- Accounts -->
 <h5>Accounts</h5>
@@ -22,16 +22,16 @@
 
 <!-- Intellectual Property -->
 <h5>Intellectual Property</h5>
-<p>a. The Service and its original content, features, and functionality are and will remain the exclusive property of GameCriticHub and its licensors. The Service is protected by copyright, trademark, and other laws of both the United States and foreign countries.</p>
-<p>b. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of [Your Company Name].</p>
+<p>a. The Service and its original content, features, and functionality are and will remain the exclusive property of NexaGame and its licensors. The Service is protected by copyright, trademark, and other laws of both the United States and foreign countries.</p>
+<p>b. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of NexaGame.</p>
 
 <!-- Disclaimer -->
 <h5>Disclaimer</h5>
-<p>a. The Service is provided on an "as is" and "as available" basis. GameCriticHub makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
+<p>a. The Service is provided on an "as is" and "as available" basis. NexaGame makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
 
 <!-- Limitation of Liability -->
 <h5>Limitation of Liability</h5>
-<p>a. In no event shall GameCriticHub, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use, or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence), or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.</p>
+<p>a. In no event shall NexaGame, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use, or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence), or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.</p>
 
 <!-- Governing Law -->
 <h5>Governing Law</h5>
