--- a/iadsapp/templates/user_policy.html
+++ b/iadsapp/templates/user_policy.html
@@ -1,13 +1,13 @@
 <!-- privacy_notice.html -->
 {% extends 'base.html' %}
 
-{% block title %}Privacy Notice{% endblock %}
+{% block title %}User Policy{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1>User Policy</h1>
 
-<p>Welcome to GameCriticHub! This User Policy governs your use of our website, services, and any related content or features provided by us.
+<p>Welcome to NexaGame! This User Policy governs your use of our website, services, and any related content or features provided by us.
 
 By accessing or using our website, you agree to comply with this User Policy. If you do not agree with any part of this policy, please do not access or use our website.</p>
 
@@ -33,7 +33,7 @@ By accessing or using our website, you agree to comply with this User Policy. If
 <h5>6. Contact Us</h5>
    <p>If you have any questions or concerns about this User Policy, please contact us at <a href="mailto:iadsprojectgame@gmail.com">iadsprojectgame@gmail.com</a>. </p>
 
-   <p>By using our website, you agree to abide by this User Policy. Thank you for being a part of GameCriticHub community!</p>
+   <p>By using our website, you agree to abide by this User Policy. Thank you for being a part of NexaGame community!</p>
 
 </div>
 {% endblock %}
