--- a/iadsapp/templates/privacy_notice.html
+++ b/iadsapp/templates/privacy_notice.html
@@ -8,7 +8,7 @@
     <h1>Privacy Notice</h1>
     <!-- Privacy Notice -->
 <h5>Privacy Notice</h5>
-<p>At GameCriticHub, we are committed to protecting your privacy. This Privacy Notice outlines how we collect, use, and protect your personal information when you use our website.</p>
+<p>At NexaGame, we are committed to protecting your privacy. This Privacy Notice outlines how we collect, use, and protect your personal information when you use our website.</p>
 
 <!-- Information Collection and Use -->
 <h5>Information Collection and Use</h5>
