Update password option in Edit profile

--- a/iadsapp/templates/edit_user.html
+++ b/iadsapp/templates/edit_user.html
@@ -70,7 +70,7 @@
                     </form>
 
                     <div>
-                    <a class="btn btn-primary" href="{% url 'forgot_password' %}" style="background-color: #263238;">Change Password</a>
+                    <a class="btn btn-primary" href="{% url 'update_password' %}" style="background-color: #263238;">Change Password</a>
                     </div>
                 </div>
             </div>
