Star colour update in MostPopularGames,top 100 and Games by Genre

--- a/iadsapp/templates/games_by_genre.html
+++ b/iadsapp/templates/games_by_genre.html
@@ -76,7 +76,7 @@
                             </span>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; font-weight: bold;" >{{ game.game_release }}</p>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">
-                                <span style="color: orange; font-size: 24px;">&#9733;</span> {{ game.game_rating }}
+                                <span style="color: #FF5733; font-size: 24px;">&#9733;</span> {{ game.game_rating }}
                             </p>
                         </div>
                     </div>
