--- a/iadsapp/templates/top100_games.html
+++ b/iadsapp/templates/top100_games.html
@@ -50,7 +50,7 @@
                                         <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
                                             <a class="blue-grey-text darken-4" href="{% url 'game_detail' game_id=game.id %}" class="game-link">{{ game.game_name }}</a>
                                         </span>
-                                        <span style="color: orange; font-size: 24px;">&#9733;</span>Rating: {{ game.game_rating }}</p>
+                                        <span style="color: #FF5733; font-size: 24px;">&#9733;</span>Rating: {{ game.game_rating }}</p>
                                     </div>
                                 </div>
                             </div>
