Back button and page title fixes

--- a/iadsapp/templates/game_details.html
+++ b/iadsapp/templates/game_details.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Game details</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -46,6 +46,7 @@
 
       <!--   Icon Section   -->
       <div class="row">
+      <a href="javascript:history.go(-1);" class="btn-flat white-text blue-grey darken-4" style="margin-left: 10px;"><i class="material-icons left"></i>Back</a>
         <div class="col s12">
           <h2 class="header", style="margin-left: 35px;"><b>Game Details</b></h2>
           <div class="card horizontal ", style="width: 1200px; margin-left: 35px;">
