--- a/iadsapp/templates/game_types.html
+++ b/iadsapp/templates/game_types.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    Game genres
+{% endblock %}
+
 {% block content %}
 {% load static %}
-
+    
 <div class="container">
 <br>
     <div class="row">
