Update password page Style fix

--- a/iadsapp/static/css/update_password.css
+++ b/iadsapp/static/css/update_password.css
@@ -5,13 +5,13 @@ body {
 }
 
 .signin-container {
-    max-width: 400px;
+    max-width: 325px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    align-content: center;
+    text-align: center;
 }
 
 .form-group {
@@ -22,7 +22,7 @@ label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-    text-align: left; /* Align labels to the left */
+    text-align: left;
 }
 
 input[type="text"],
@@ -31,7 +31,6 @@ input[type="password"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    align-items: center;
 }
 
 button[type="submit"] {
@@ -42,11 +41,12 @@ button[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    align-items: center;
+    text-align: center;
 }
 
 button[type="submit"]:hover {
     background-color: #263238;
+    text-align: center;
 }
 
 .back-to-profile {
