Changes on Calendar page

--- a/iadsapp/templates/award_detail.html
+++ b/iadsapp/templates/award_detail.html
@@ -62,6 +62,22 @@
                 <img src="{% static 'game12.png' %}" alt="Disney Sports Soccer" style="width: 300px; height: auto;">
             {% elif award.game_name == "Simulassword" %}
                 <img src="{% static 'game13.png' %}" alt="Simulassword" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Stellar Blade" %}
+                <img src="{% static 'stbgame.png' %}" alt="Stellar Blade" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Avowed" %}
+                <img src="{% static 'avo.png' %}" alt="Avowed" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Metal Beans" %}
+                <img src="{% static 'metal.png' %}" alt="Metal Beans" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Total rush" %}
+                <img src="{% static 'total.png' %}" alt="Total rush" style="width: 300px; height: auto;">
+                 {% elif award.game_name == "Rise of the ronin" %}
+                <img src="{% static 'rise.png' %}" alt="Rise of the ronin" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Amedama" %}
+                <img src="{% static 'ame.png' %}" alt="Amedama" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Madison VR" %}
+                <img src="{% static 'mad.png' %}" alt="Madison VR" style="width: 300px; height: auto;">
+                {% elif award.game_name == "Demon Drop DX" %}
+                <img src="{% static 'demon.png' %}" alt="Demon Drop DX" style="width: 300px; height: auto;">
             {% else %}
                 <p>No image available for this award</p>
             {% endif %}
