--- a/iadsapp/templates/upcoming_releases.html
+++ b/iadsapp/templates/upcoming_releases.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="card-container">
-        {% for release in upcoming_releases %}
+        {% for release in page_obj %}
         <div class="card">
             <img src="{{ release.game_image.url }}" alt="{{ release.game_name }}">
             <div class="card-content">
@@ -98,6 +98,25 @@
             </div>
         </div>
         {% endfor %}
+    </div>
+
+    <!-- Pagination links -->
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
     </div>
 </div>
 
