Added styling to signin, siginup and forgot pass

--- a/iadsapp/static/css/signin.css
+++ b/iadsapp/static/css/signin.css
@@ -6,27 +6,28 @@ body {
 
 .signin-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 50px auto 20px;
     padding: 20px;
-    background-color: #f9f9f9;
+
+    background-color: rgba(149, 149, 149, 0.7);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     font-weight: bold;
 }
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    width: calc(100% - 22px);
+    padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -51,7 +52,7 @@ button[type="submit"]:hover {
 }
 
 .forgot-password a {
-    color: #37474F;
+    color: white;
     text-decoration: none;
 }
 
@@ -65,7 +66,7 @@ button[type="submit"]:hover {
 }
 
 .new-to-gamecritichub a {
-    color: #37474F;
+    color: white;
     text-decoration: none;
 }
 
