--- a/iadsapp/static/css/signup.css
+++ b/iadsapp/static/css/signup.css
@@ -1,34 +1,27 @@
-/* Add styles to make the signup form more compact */
-
-
-body {
-    font-family: Arial, sans-serif;
-}
-
 .signup-container {
     max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
+    margin: 50px auto 20px; /* Adjust the top margin to bring the container down */
+    padding: 20px; /* Increase padding for better spacing */
+    background-color: rgba(149, 149, 149, 0.7);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 10px; /* Reduce bottom margin for tighter spacing */
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 3px; /* Reduce bottom margin for tighter spacing */
     font-weight: bold;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    width: calc(100% - 22px); /* Reduce input width and adjust for padding */
+    padding: 8px; /* Reduce padding for tighter spacing */
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -53,7 +46,7 @@ button[type="submit"]:hover {
 }
 
 .existing-account a {
-    color: #37474F;
+    color: white;
     text-decoration: none;
 }
 
@@ -62,8 +55,8 @@ button[type="submit"]:hover {
 }
 
 .project-name {
-    background-color: #37474F; /* Set the background color to match the button */
-    padding: 10px; /* Adjust padding as needed */
-    color: #ffffff; /* Set the text color to white */
-    text-align: center; /* Center the text */
+    background-color: #37474F;
+    padding: 10px;
+    color: #ffffff;
+    text-align: center;
 }
