--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -37,7 +37,7 @@
 
       }
   </style>
-    <a href="{% url 'homepage' %}" class="brand-logo"><img src="{% static 'img/icons/Untitled design.gif'%}" alt=""></a>
+    <a href="{% url 'homepage' %}" class="brand-logo"><img src="{% static 'img/icons/logo02.png'%}" alt=""></a>
     <ul class="right hide-on-med-and-down">
         {% if user.is_authenticated %}
                 <!-- If user is authenticated, show Profile -->
