--- a/iadsapp/templates/forgot_password.html
+++ b/iadsapp/templates/forgot_password.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - NexaGame</title>
+    <style>
+        body {
+            background-image: url('{% static "img/gamesignin01.jpg" %}');
+            background-size: cover;
+            background-position: center;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
     <link rel="stylesheet" href="{% static 'css/signin.css' %}">
 </head>
 <body>
