--- a/iadsapp/templates/update_password.html
+++ b/iadsapp/templates/update_password.html
@@ -5,13 +5,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Change Password</title>
     <link rel="stylesheet" href="{% static 'css/update_password.css' %}">
+    <style>
+        body {
+            background-image: url('{% static "img/gamesignin01.jpg" %}');
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .signin-container {
+            text-align: center;
+            margin-top: 50px; /* Adjust as needed */
+        }
+
+        form {
+            width: 300px;
+            margin: 0 auto; /* Center horizontally */
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        .form-group label {
+            display: block;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .btn-upd-pswd {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin-top: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .btn-upd-pswd:hover {
+            background-color: #45a049;
+        }
+
+        .back-to-profile {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>    
 <div class="signin-container">
     <h2>Update Password</h2>
-    <form method="post" style="width: 300px;">
+    <form method="post">
         {% csrf_token %}
         {{ form.old_password.errors }}
         <div class="form-group">
@@ -30,10 +86,9 @@
         </div>
         <button type="submit" class="btn-upd-pswd">Update Password</button>
     </form>
-        <div class="back-to-profile">
-            <p>Back to <a href="{% url 'profilepage_view' %}">Profile</a></p>
-        </div>
+    <div class="back-to-profile">
+        <p>Back to <a href="{% url 'profilepage_view' %}">Profile</a></p>
+    </div>
 </div>
 </body>
 </html>
-
