--- a/iadsapp/templates/forgot_password.html
+++ b/iadsapp/templates/forgot_password.html
@@ -14,6 +14,36 @@
             margin: 0;
             padding: 0;
         }
+
+        .signin-container {
+            text-align: left;
+            margin: 50px auto; /* Center the container horizontally and move it to the top */
+            width: 600px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+        }
+
+        .input-field {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            text-align: justify;
+        }
+
+        .btn-signin {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
     </style>
     <link rel="stylesheet" href="{% static 'css/signin.css' %}">
 </head>
@@ -21,7 +51,7 @@
     <div class="signin-container">
         <h1 class="project-name">NexaGame</h1>
         <h2>Forgot Password</h2>
-        <form method="post" style="width: 300px;">
+        <form method="post">
             {% csrf_token %}
             <div class="form-group">
                 <label for="email">Email:</label><br>
