--- a/iadsapp/templates/signin.html
+++ b/iadsapp/templates/signin.html
@@ -14,6 +14,48 @@
             margin: 0;
             padding: 0;
         }
+
+        .signin-container {
+            text-align: center; /* Center align content */
+        }
+
+        form {
+            width: 300px; /* Set form width */
+            margin: 0 auto; /* Center the form horizontally */
+        }
+
+        .form-group {
+            text-align: left; /* Align form labels to the left */
+            margin-bottom: 15px; /* Add space between form fields */
+        }
+
+        .form-group input {
+            width: 100%; /* Set input fields to fill container width */
+            padding: 10px; /* Adjust input field padding */
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .btn-signin {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin-top: 10px; /* Add space between input fields and button */
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .btn-signin:hover {
+            background-color: #45a049;
+        }
+
+        .forgot-password,
+        .new-to-gamecritichub {
+            margin-top: 20px; /* Add space between links and form */
+        }
     </style>
     <link rel="stylesheet" href="{% static 'css/signin.css' %}">
 </head>
