Adding Quality images in Game news page

--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -8,7 +8,7 @@
         <div class="col s12 m12">
           <div class="card">
             <div class="card-image">
-              <img src="{% static 'img/gamebg.jpg' %}">
+              <img src="{% static 'img/profile_bg.jpg' %}">
                  {% if custom_user.profile_pic %}
                         <!--<img class="profile-pic" src="{{ custom_user.profile_pic.url }}" >-->
                         <img id="img-custom-circle-actor1" src="{{ custom_user.profile_pic.url }}" alt="Profile Pic">
