--- a/iadsapp/templates/game_news.html
+++ b/iadsapp/templates/game_news.html
@@ -10,12 +10,12 @@
         {% for news in game_news %}
         <!-- Display each game news item -->
         <div class="row">
-            <div class="col s12 m12">
-                <h2 class="header center-align"><b>{{ news.title }}</b></h2>  <!-- Center-align the title -->
-                <h6 class="center-align"><b>{{ news.bio }}</b></h6>  <!-- Center-align the bio -->
-                <div class="center-align">  <!-- Center-align the image -->
+            <div class="col s20 m20">
+                <h2 ><b>{{ news.title }}</b></h2>  <!-- Center-align the title -->
+                <h6><b>{{ news.bio }}</b></h6>  <!-- Center-align the bio -->
+                <div>  <!-- Center-align the image -->
                     <br>
-                    <img src="{{ news.image.url }}" style="max-width: 40%; height: auto;">  <!-- Adjust image width -->
+                    <img src="{{ news.image.url }}" style="max-width: 90%; height: auto;">  <!-- Adjust image width -->
                 </div>
                 <div style="margin-left: auto; margin-right: auto; max-width: 1200px; text-align: left;">  <!-- Center-align text and limit width -->
                     <p>{{ news.description | linebreaks }}</p>
