Updated Visit data

--- a/iadsapp/templates/base.html
+++ b/iadsapp/templates/base.html
@@ -82,7 +82,7 @@
                 Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Group 5</a>
             </div>
     </div>
-
+    </div>
 </footer>
 
   <!--  Scripts-->
