--- a/iadsapp/templates/game_types.html
+++ b/iadsapp/templates/game_types.html
@@ -37,6 +37,13 @@
 </div>
 
 <style>
+
+.container {
+    max-height: 620px; /* Adjust the maximum width as needed */
+    margin: 0 auto; /* Center the container horizontally */
+    padding: 10px; /* Add some padding inside the container */
+}
+
 {#  .left-column {#}
 {#    background: linear-gradient(to right, #5daedc, #9cd3cd); /* Light gradient background color */#}
 {#    border-radius: 10px;#}
@@ -100,7 +107,6 @@ html,body{
   width: 500px;
   height: 40px;
   border-radius: 50%;
-  {#background: radial-gradient(#805d78,rgba(0,0,0,0) 70%);#}
 }
 
 img{
@@ -203,8 +209,6 @@ clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
     left:150px;
   }
 }
-
-
 
 
 </style>
